# pycodec2

./: .gitignore  DEV.md  LICENSE  MANIFEST.in  Pipfile  README.md  example.py  lefthook.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml
codec2-integration-tests/: Dockerfile  README.md  test.sh
dev/: rune2etest  test
docs/: Makefile  conf.py  index.rst  make.bat
pycodec2/: __init__.py  codec2.pxd  pycodec2.pyx
test/: test_trashcan.py
test/data/: trashcan-1200-decoded-macos15-m3.raw  trashcan-1200-decoded-ubuntu.raw  trashcan-1200-decoded.raw  trashcan.raw
