# This file is necessary for the build system as it specifies the build-time
# dependencies.
# You need to keep it in sync with development dependencies specified in
# Pipfile.
[build-system]
requires = [
  "Cython==3.*",
  "numpy==1.26.*",
  "setuptools"
]

# Required table with required fields: https://peps.python.org/pep-0621/#table-name.
[project]
name = "pycodec2"
version = "3.0.2"
description = "A Cython wrapper for codec2"
readme = "README.md"

# Authors are defined in setup.py.
# https://discuss.python.org/t/adding-extra-fields-in-the-pyproject-toml-authors-maintainers-list/16848/3
dynamic = ["authors"]

keywords = ["codec2", "audio", "voice", "speech"]
classifiers=[
  'Topic :: Multimedia :: Sound/Audio :: Speech',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3',
  'Development Status :: 5 - Production/Stable',
]

# Necessary for cibuildwheel not to use an old python that may have old
# libraries. E.g., python 3.6 does not have numpy 1.26.
# https://cibuildwheel.readthedocs.io/en/stable/options/#requires-python
#
# Using at least Python 3.9, because as of 2023-09, 3.8 is outdated.
requires-python = ">=3.9"

# Use-time dependencies.
dependencies = [
  # The package will error out on import if these are not installed.
  "numpy>=1.22, <2.0.0",
]
